--- a/website/content/en/releases/15.0R/hardware.adoc
+++ b/website/content/en/releases/15.0R/hardware.adoc
@@ -1123,6 +1123,16 @@ ATAPI and non-DMA ATA commands executed one by one for each port.
 
 
 The
+**nda**
+driver supports NVMe
+(Non-Volatile Memory Express)
+storage devices connected via PCIe or over NVMF
+(NVMe over Fabric)
+via the CAM subsystem.
+
+
+
+The
 **ocs_fc**
 driver supports these Fibre Channel adapters:
 
@@ -1183,6 +1193,33 @@ The
 **pst**
 driver supports the Promise Supertrak SX6000 ATA hardware RAID
 controller.
+
+
+
+The
+**sdhci**
+driver supports the SD Host Controller Specification.
+When attaching via the PCI bus,
+the controller is automatically configured.
+Many SoC chips provide a SDHCI controller directly mapped to I/O memory.
+For those, the controller may be configured using
+fdt(4)
+or
+acpi(4)
+methods, supplied by your board's vendor.
+
+Unlike most other drivers that support a generic standard,
+**sdhci**
+requires a large number of quirks to cope with hardware bugs,
+proprietary registers and poorly specified power management.
+While many chipsets from
+Intel, Xilinx, Rockchip, Frescale, Ricoh, and TI have these entries,
+suboptimal performance may result when using some controllers.
+Quirks and custom configuration are most often required
+when the device is configured via
+fdt(4)
+or
+acpi(4).
 
 
 
@@ -4911,19 +4948,6 @@ driver supports the following temperature sensors:
 	MAX31820   1-Wire, Parasite-Power, Ambient Temperature Sensor
 
 The driver supports Family codes 0x10, 0x22, 0x28, and 0x3b.
-
-
-
-The
-**sdhci**
-driver supports different specification compatible chips.
-The following chips have been verified to work:
-
-*	ENE CB712
-*	ENE CB714
-*	RICOH R5C822
-*	RICOH R5CE823
-*	TI PCIXX21/XX11/XX12
 
 
 
