--- a/website/content/en/releases/15.0R/schedule.adoc
+++ b/website/content/en/releases/15.0R/schedule.adoc
@@ -39,7 +39,7 @@ General discussions about the pending release and known issues should be sent to
 |ALPHA2 builds begin |12 September 2025 |14 September 2025 |Second alpha test snapshot.
 |ALPHA3 builds begin |19 September 2025 |20 September 2025 |Third alpha test snapshot.
 |ALPHA4 builds begin |26 September 2025 |26 September 2025 |Fourth alpha test snapshot.
-|ALPHA5 builds begin |3 October 2025 |- |Fifth alpha test snapshot.
+|ALPHA5 builds begin |3 October 2025 |4 October 2025 |Fifth alpha test snapshot.
 |{localBranchReleng} branch |[.line-through]#3 October 2025# +
 10 October 2025 |- |{localBranchReleng} branch created; future release engineering proceeds on this branch.
 |BETA1 builds begin |[.line-through]#3 October 2025# +
