Status/2025Q3: typo fixes

--- a/website/content/en/status/report-2025-07-2025-09/drm-drivers.adoc
+++ b/website/content/en/status/report-2025-07-2025-09/drm-drivers.adoc
@@ -17,7 +17,7 @@ This quarter, the work was slower with the holidays.
 However, there are still issues that need to be worked on:
 * There is a regression in the integration of the `amdgpu` driver with man:vt[4], causing the console to go blank once the driver is loaded.
   A graphical session still works though.
-* There are significant changes to the `radix-tree` suppport in `linuxkpi` that needs more testing.
+* There are significant changes to the `radix-tree` support in `linuxkpi` that needs more testing.
 * The `siphash` code committed to `linuxkpi` is not working yet.
 
 The pull request on GitHub and the associated freebsd-src branch may not have the latest versions, until the compilation and load failures are fixed.
