--- a/website/content/en/status/report-2025-07-2025-09/lkpi-wireless.adoc
+++ b/website/content/en/status/report-2025-07-2025-09/lkpi-wireless.adoc
@@ -7,7 +7,7 @@ This report focuses on the efforts using permissively licensed Linux wireless dr
 
 Work is ongoing for Mediatek mt76-based PCIe card support.
 
-LinuxKPI 802.11 (man:linuxkpi_wlan[4]) updates were comitted for scanning and beacon handling improvements and more robustness.
+LinuxKPI 802.11 (man:linuxkpi_wlan[4]) updates were committed for scanning and beacon handling improvements and more robustness.
 
 LinuxKPI updates were done in order to import newer versions of man:iwlwifi[4], man:rtw88[4], and man:rtw89[4] drivers.
 Work on suspend and resume for LinuxKPI-based wireless drivers has a possible solution which will need community testing and feedback.
