status/bhyvemgr: spell dnsmasq

--- a/website/content/en/status/report-2025-07-2025-09/bhyvemgr.adoc
+++ b/website/content/en/status/report-2025-07-2025-09/bhyvemgr.adoc
@@ -17,7 +17,7 @@ These are some highlights that were added:
 - Add x86.verbosemsr setting on FreeBSD >=1500023.
 - Add IPv6 support.
   It enhances a better IPv6 support using package:dns/dnsmasq[].
-  A host-record will be added to dnasmasq when Use_IPv6 is enabled.
+  A host-record will be added to dnsmasq when Use_IPv6 is enabled.
 - Add a bridge IPv6 calculator at Bhyve Manager Settings.
   It helps us to calculate what IPv6 must be assigned to bridge interface.
   Take a look at README for more information about that.
