--- a/website/content/en/status/report-2025-07-2025-09/bananapi-r64-drivers.adoc
+++ b/website/content/en/status/report-2025-07-2025-09/bananapi-r64-drivers.adoc
@@ -11,6 +11,9 @@ The Banana Pi R64 is a MediaTek MT7622-based development board (ARM Cortex-A53, 
   * **UART driver**
   * **Clock management (clocks)**
   * **Pinctrl/gpio driver** – in active development gpio part
+  * **Storage controllers (eMMC/SD/MMC) driver
+  * **Ethernet Switch mt7531 driver
+  * **Ethernet mt7622 driver
 
 Other essential components—Ethernet, USB, SATA, Wi-Fi, etc.—are not yet implemented.
 
@@ -19,10 +22,8 @@ Support for Banana Pi R64 in FreeBSD is in the early stages—UART and clocks dr
 
 ==== Development roadmap
 * Implement missing drivers
-  - Ethernet (GMAC ports)
   - USB (XHCI/OTG)
   - SATA / AHCI
-  - Storage controllers (eMMC/SD/MMC)
   - Wi-Fi (likely MediaTek MT7615)
   - GPIO subsystems
 
