Correct gnn@'s name in some documents that reference the DNI book
Approved by:		    carlavilla
Differential Revision:	    https://reviews.freebsd.org/D52843

--- a/documentation/content/en/articles/linux-emulation/_index.adoc
+++ b/documentation/content/en/articles/linux-emulation/_index.adoc
@@ -1431,6 +1431,6 @@ I would like to thank all those people for their advice, code reviews and genera
 [[literatures]]
 == Literatures
 
-. Marshall Kirk McKusick - George V. Nevile-Neil. Design and Implementation of the FreeBSD operating system. Addison-Wesley, 2005.
+. Marshall Kirk McKusick - George V. Neville-Neil. Design and Implementation of the FreeBSD operating system. Addison-Wesley, 2005.
 . https://tldp.org[https://tldp.org]
 . https://www.kernel.org[https://www.kernel.org]
