--- a/documentation/content/es/articles/linux-emulation/_index.adoc
+++ b/documentation/content/es/articles/linux-emulation/_index.adoc
@@ -968,6 +968,6 @@ Me gustaría agradecer a todas esas personas por sus consejos, revisiones de có
 [[literatures]]
 == Bibliografía
 
-. Marshall Kirk McKusick - George V. Nevile-Neil. Diseño e implementación del sistema operativo FreeBSD. Addison-Wesley, 2005.
+. Marshall Kirk McKusick - George V. Neville-Neil. Diseño e implementación del sistema operativo FreeBSD. Addison-Wesley, 2005.
 . https://tldp.org[https://tldp.org]
 . https://www.kernel.org[https://www.kernel.org]
