--- a/documentation/content/pt-br/articles/linux-emulation/_index.adoc
+++ b/documentation/content/pt-br/articles/linux-emulation/_index.adoc
@@ -968,6 +968,6 @@ Gostaria de agradecer a todas as pessoas por seus conselhos, revisões de códig
 [[literatures]]
 == Literaturas
 
-. Marshall Kirk McKusick - George V. Nevile-Neil. Design and Implementation of the FreeBSD operating system. Addison-Wesley, 2005.
+. Marshall Kirk McKusick - George V. Neville-Neil. Design and Implementation of the FreeBSD operating system. Addison-Wesley, 2005.
 . https://tldp.org[https://tldp.org]
 . https://www.kernel.org[https://www.kernel.org]
