--- a/website/content/en/releases/15.0R/schedule.adoc
+++ b/website/content/en/releases/15.0R/schedule.adoc
@@ -41,9 +41,9 @@ General discussions about the pending release and known issues should be sent to
 |ALPHA4 builds begin |26 September 2025 |26 September 2025 |Fourth alpha test snapshot.
 |ALPHA5 builds begin |3 October 2025 |4 October 2025 |Fifth alpha test snapshot.
 |{localBranchReleng} branch |[.line-through]#3 October 2025# +
-10 October 2025 |- |{localBranchReleng} branch created; future release engineering proceeds on this branch.
+10 October 2025 |10 October 2025 |{localBranchReleng} branch created; future release engineering proceeds on this branch.
 |BETA1 builds begin |[.line-through]#3 October 2025# +
-10 October 2025 |- |First beta test snapshot.
+10 October 2025 |11 October 2025 |First beta test snapshot.
 |BETA2 builds begin |[.line-through]#10 October 2025# +
 17 October 2025 |- |Second beta test snapshot.
 |BETA3 builds begin |[.line-through]#17 October 2025# +
