status/geomman: spell

--- a/website/content/en/status/report-2025-07-2025-09/geomman.adoc
+++ b/website/content/en/status/report-2025-07-2025-09/geomman.adoc
@@ -8,7 +8,7 @@ Contact: Braulio Rivas <brauliorivas@FreeBSD.org>
 
 Geomman is a partitioning tool (TUI) based on man:sade[8] that brings more functionality such as copying, pasting partitions, creating ext filesystems or encrypting partitions using man:geli[8].
 
-Geomman is relevant for both newcomers and experienced users bcause it is a complete and unified management of partitions and disks.
+Geomman is relevant for both newcomers and experienced users because it is a complete and unified management of partitions and disks.
 
 Features added to geomman since last report are:
 
