fix anchors in EN adoc
Reviewed by: maxim (mentor)
Approved by: maxim (mentor), carlavilla
Differential Revision: https://reviews.freebsd.org/D53002

--- a/documentation/content/en/books/handbook/advanced-networking/_index.adoc
+++ b/documentation/content/en/books/handbook/advanced-networking/_index.adoc
@@ -758,7 +758,7 @@ The client machine found the AP and can be associated with it:
 
 This section focuses on setting up a FreeBSD access point using the WPA2 security protocol.
 More details regarding WPA and the configuration of WPA-based wireless clients
-can be found in crossref:advanced-networking[network-wireless-wpa, WPA with EAP-TLS].
+can be found in crossref:advanced-networking[network-wireless-wpa-eap-tls, WPA with EAP-TLS].
 
 The man:hostapd[8] daemon is used to deal with client authentication and key management on the WPA2-enabled AP.
 
