--- a/documentation/content/en/books/handbook/x11/_index.adoc
+++ b/documentation/content/en/books/handbook/x11/_index.adoc
@@ -308,7 +308,7 @@ To enable the driver, add the module to
 # sysrc kld_list+=nvidia-drm
 ....
 
-This is the direct rendering crossref:glossary[glossary-kms,KMS] driver.
+This is the direct rendering crossref:glossary[kms-glossary,KMS] driver.
 
 Kernel modesetting is the option to set the graphics mode in the kernel.
 Enable it for subsequent boots with the following man:loader.conf[5]
