--- a/documentation/content/en/books/porters-handbook/makefiles/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/makefiles/_index.adoc
@@ -2290,8 +2290,7 @@ Furthermore, `DEFAULT` is a special purpose word (check item
 crossref:makefiles[porting-master-sites-n-DEFAULT-group,3]).
 . Elements postfixed with `:n` belong to the group `n`, `:m` belong to group `m` and so forth.
 +
-[[porting-master-sites-n-DEFAULT-group]]
-. Elements without a postfix are groupless, they all belong to the special group
+. [[porting-master-sites-n-DEFAULT-group]] Elements without a postfix are groupless, they all belong to the special group
   `DEFAULT`. Any elements postfixed with `DEFAULT`, is just being redundant
   unless an element belongs to both `DEFAULT` and other groups at the same time
   (check item crossref:makefiles[porting-master-sites-n-comma-operator,5]).
@@ -2310,8 +2309,7 @@ MASTER_SITES=	alpha:DEFAULT
 
 . Groups are not exclusive, an element may belong to several different groups at the same time and a group can either have either several different elements or none at all.
 +
-[[porting-master-sites-n-comma-operator]]
-. When an element belongs to several groups at the same time, use the comma operator (`,`).
+. [[porting-master-sites-n-comma-operator]] When an element belongs to several groups at the same time, use the comma operator (`,`).
 +
 Instead of repeating it several times, each time with a different postfix, we can list several groups at once in a single postfix.
 For instance, `:m,n,o` marks an element that belongs to group `m`, `n` and `o`.
@@ -2340,8 +2338,7 @@ MASTER_SITES=	alpha:DEFAULT,SOME_SITE
 
 . All sites within a given group are sorted according to `MASTER_SORT_AWK`. All groups within `MASTER_SITES` and `PATCH_SITES` are sorted as well.
 +
-[[porting-master-sites-n-group-semantics]]
-. Group semantics can be used in any of the variables `MASTER_SITES`, `PATCH_SITES`, `MASTER_SITE_SUBDIR`, `PATCH_SITE_SUBDIR`, `DISTFILES`, and `PATCHFILES` according to this syntax:
+. [[porting-master-sites-n-group-semantics]] Group semantics can be used in any of the variables `MASTER_SITES`, `PATCH_SITES`, `MASTER_SITE_SUBDIR`, `PATCH_SITE_SUBDIR`, `DISTFILES`, and `PATCHFILES` according to this syntax:
 .. All `MASTER_SITES`, `PATCH_SITES`, `MASTER_SITE_SUBDIR` and
    `PATCH_SITE_SUBDIR` elements must be terminated with the forward slash `/`
    character. If any elements belong to any groups, the group postfix `:__n__`
@@ -2492,8 +2489,7 @@ PATCHFILES=	patch1:test
   according to the aforementioned syntax rules, especially as shown in item
   crossref:makefiles[porting-master-sites-n-group-semantics, 7].
 +
-[[porting-master-sites-n-what-changes-in-port-targets]]
-. The port targets remain the same: `checksum`, `makesum`, `patch`, `configure`, `build`, etc. With the obvious exceptions of `do-fetch`, `fetch-list`, `master-sites` and `patch-sites`.
+. [[porting-master-sites-n-what-changes-in-port-targets]] The port targets remain the same: `checksum`, `makesum`, `patch`, `configure`, `build`, etc. With the obvious exceptions of `do-fetch`, `fetch-list`, `master-sites` and `patch-sites`.
 
 ** `do-fetch`: deploys the new grouping postfixed `DISTFILES` and `PATCHFILES`
    with their matching group elements within both `MASTER_SITES` and
@@ -2511,8 +2507,7 @@ crossref:makefiles[porting-master-sites-n-new-port-targets-master-sites-all, B] 
 . New port targets
 .. There are `master-sites-_n_` and `patch-sites-_n_` targets which will list the elements of the respective group _n_ within `MASTER_SITES` and `PATCH_SITES` respectively. For instance, both `master-sites-DEFAULT` and `patch-sites-DEFAULT` will return the elements of group `DEFAULT`, `master-sites-test` and `patch-sites-test` of group `test`, and thereon.
 +
-[[porting-master-sites-n-new-port-targets-master-sites-all]]
-.. There are new targets `master-sites-all` and `patch-sites-all` which do the work of the old `master-sites` and `patch-sites` ones. They return the elements of all groups as if they all belonged to the same group with the caveat that it lists as many `MASTER_SITE_BACKUP` and `MASTER_SITE_OVERRIDE` as there are groups defined within either `DISTFILES` or `PATCHFILES`; respectively for `master-sites-all` and `patch-sites-all`.
+.. [[porting-master-sites-n-new-port-targets-master-sites-all]] There are new targets `master-sites-all` and `patch-sites-all` which do the work of the old `master-sites` and `patch-sites` ones. They return the elements of all groups as if they all belonged to the same group with the caveat that it lists as many `MASTER_SITE_BACKUP` and `MASTER_SITE_OVERRIDE` as there are groups defined within either `DISTFILES` or `PATCHFILES`; respectively for `master-sites-all` and `patch-sites-all`.
 
 [[makefile-dist_subdir]]
 === `DIST_SUBDIR`
@@ -3717,7 +3712,7 @@ Perl related variables are described in crossref:special[using-perl,Using Perl].
 X11 variables are listed in crossref:special[using-x11,Using X11].
 crossref:special[using-gnome,Using Gnome] deals with GNOME and crossref:special[using-kde,Using KDE] with KDE related variables.
 crossref:special[using-java,Using Java] documents Java variables, while crossref:special[using-php,Web Applications, Apache and PHP] contains information on Apache, PHP and PEAR modules.
-Python is discussed in crossref:special[using-python,Using Python], while Ruby in crossref:special[using-ruby,Using Ruby].
+Python is discussed in crossref:special[using-python,Using Python], while Ruby in crossref:uses[uses-ruby,Ruby].
 crossref:special[using-sdl,Using SDL] provides variables used for SDL applications and finally, crossref:special[using-xfce,Using Xfce] contains information on Xfce.
 
 [[makefile-version-dependency]]
