update translation of books/developers-handbook to Russian
Reviewed by: maxim (mentor), marck
Approved by: maxim (mentor)
Differential Revision: https://reviews.freebsd.org/D52025

--- a/documentation/content/ru/books/developers-handbook/book.adoc
+++ b/documentation/content/ru/books/developers-handbook/book.adoc
@@ -1,32 +1,27 @@
 ---
-add_single_page_link: true
+add_split_page_link: true
 authors:
   - 
     author: 'The FreeBSD Documentation Project'
-bookOrder: 25
 copyright: '1995-2023 The FreeBSD Documentation Project'
 description: 'Для тех, кто хочет разрабатывать программное обеспечение для FreeBSD (а не только для тех, кто разрабатывает саму FreeBSD)'
-next: books/developers-handbook/parti
-params:
-  path: /books/developers-handbook/
-showBookMenu: true
 tags: "[\"FreeBSD Developers' Handbook\"]"
 title: 'Руководство разработчика FreeBSD'
 trademarks: ["freebsd", "apple", "ibm", "ieee", "intel", "linux", "microsoft", "opengroup", "sun", "general"]
-weight: 0
 ---
 
 = Руководство разработчика FreeBSD
 :doctype: book
 :toc: macro
-:toclevels: 1
+:toclevels: 2
 :icons: font
 :sectnums:
 :sectnumlevels: 6
 :partnums:
 :source-highlighter: rouge
 :experimental:
-:images-path: books/developers-handbook/
+:book: true
+:pdf: false
 
 ifdef::env-beastie[]
 ifdef::backend-html5[]
@@ -37,13 +32,16 @@ include::shared/attributes/attributes-{{% lang %}}.adoc[]
 include::shared/{{% lang %}}/teams.adoc[]
 include::shared/{{% lang %}}/mailing-lists.adoc[]
 include::shared/{{% lang %}}/urls.adoc[]
+:chapters-path: content/{{% lang %}}/books/developers-handbook/
 endif::[]
 ifdef::backend-pdf,backend-epub3[]
+:chapters-path:
 include::../../../../../shared/asciidoctor.adoc[]
 endif::[]
 endif::[]
 
 ifndef::env-beastie[]
+:chapters-path:
 include::../../../../../shared/asciidoctor.adoc[]
 endif::[]
 
@@ -55,3 +53,32 @@ endif::[]
 Последняя версия этого документа всегда доступна по ссылке link:https://www.FreeBSD.org[веб-сервер FreeBSD]. Его также можно загрузить в различных форматах и с разными вариантами сжатия с link:https://download.freebsd.org/doc/[сервера загрузки FreeBSD] или одного из многочисленных extref:{handbook}[зеркальных сайтов, mirrors].
 
 '''
+
+toc::[]
+
+// Section one
+include::{chapters-path}parti.adoc[]
+include::{chapters-path}introduction/_index.adoc[leveloffset=+1]
+include::{chapters-path}tools/_index.adoc[leveloffset=+1]
+include::{chapters-path}secure/_index.adoc[leveloffset=+1]
+include::{chapters-path}l10n/_index.adoc[leveloffset=+1]
+include::{chapters-path}policies/_index.adoc[leveloffset=+1]
+include::{chapters-path}testing/_index.adoc[leveloffset=+1]
+
+// Section two
+include::{chapters-path}partii.adoc[]
+include::{chapters-path}sockets/_index.adoc[leveloffset=+1]
+include::{chapters-path}ipv6/_index.adoc[leveloffset=+1]
+
+// Section three
+include::{chapters-path}partiii.adoc[]
+include::{chapters-path}kernelbuild/_index.adoc[leveloffset=+1]
+include::{chapters-path}kerneldebug/_index.adoc[leveloffset=+1]
+
+// Section four
+include::{chapters-path}partiv.adoc[]
+include::{chapters-path}x86/_index.adoc[leveloffset=+1]
+
+// Appendices
+include::{chapters-path}partv.adoc[]
+include::{chapters-path}bibliography/_index.adoc[leveloffset=+1]
